2015-07-13 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/cpp/configure.ac:
	* support/cpp/configure:
	* support/cpp/Makefile.in:
	* Makefile.common.in:
	  Fix small spots.

2015-07-13 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/linksrc/lklex.c:
	  Support unicode character in sdld's command line.
	* sdas/linksrc/lkbank.c:
	  Remove unsupported ".s28" and ".s37" file extensions.

2015-07-12 Ben Shi <powerstudio1st AT 163 DOT com>

	* configure.in:
	* debugger/mcs51/configure:
	* debugger/mcs51/configure.in:
	* device/lib/pic14/Makefile.in:
	* device/lib/pic14/aclocal.m4:
	* device/lib/pic14/config.h.in:
	* device/lib/pic14/configure.in:
	* device/lib/pic14/libm/Makefile.in:
	* device/lib/pic14/libsdcc/enhanced/Makefile.in:
	* device/lib/pic14/libsdcc/enhanced-no-xinst/Makefile.in:
	* device/lib/pic14/libsdcc/regular/Makefile.in:
	* device/non-free/lib/pic14/configure:
	* device/non-free/lib/pic14/configure.in:
	* sim/ucsim/configure.in:
	* support/cpp/configure:
	* support/cpp/configure.in:
	* support/packihx/configure:
	* support/packihx/configure.in:
	  Move all configure.in to configure.ac and update with autoconf 2.69.

2015-07-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Fix comments.
	* device/lib/stm8/_mulint.s:
	  Faster, smaller integer multiplication.

2015-07-08 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/sdbinutils/bfd/asxxxx.c:
	  Fix a bug in check .rel format while there are comments.

2015-07-06 Ben Shi <powerstudio1st AT 163 DOT com>

	* configure:
	* configure.in:
	* device/include/Makefile.in:
	* support/sdbinutils/Makefile.in:
	* support/sdbinutils/binutils/Makefile.in:
	  Make "make install" and "make uninstall" more clear.

2015-07-05 Philipp Klaus Krause <pkk AT spth.de>

	* support/sdbinutils/binutils/*
	  Fix bug #2394 and do not ship files generated by yacc.

2015-07-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  Patch from z88dk to allow comments in between rule and condition.
