@@ -2993,12 +2993,26 @@ genFunction (iCode *ic)
   if (IFFUNC_ISCRITICAL (ftype))
       genCritical (NULL);
 
+  // Workaround for hardware bug: Undocumented bit 6 of the condition code register needs to be cleared before div/divw. It is set during div/divw execution, and then reset. Without the workaround, the div and divw inside interrupt routines will give wrong results when the interrupt itself occured while another div or divw was executed.
+  // For more information see sections titled "Unexpected DIV/DIVW instruction result in ISR" in various STM8 errata notes (apparently all STM8 are affected).
+  // The workaround here is the one recommended by STM in the erratum. There might be better ways to do it.
+  if (IFFUNC_ISISR (sym->type))
+    {
+      D (emit2 (";", "Reset bit 6 of reg CC. Hardware bug workaround."));
+      emit2 ("push", "cc");
+      emit2 ("pop", "a");
+      emit2 ("and", "a, #0xbf");
+      emit2 ("push", "a");
+      emit2 ("pop", "cc");
+      cost (6, 5);
+    }
+
   if (stm8_extend_stack) // Setup for extended stack access.
     {
       G.stack.size = stm8_call_stack_size + (sym->stack ? sym->stack : 0);
-      D (emit2(";", "Setup y for extended stack access."));
-      emit2("ldw", "y, sp");
-      emit2("subw", "y, #%ld", G.stack.size - 256);
+      D (emit2 (";", "Setup y for extended stack access."));
+      emit2 ("ldw", "y, sp");
+      emit2 ("subw", "y, #%ld", G.stack.size - 256);
       cost (6, 3);
     }
 
