@@ -1,3 +1,8 @@
+2015-07-26 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
+	  Workaround for for stm8 division hardware bug.
+
 2015-07-13 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* support/cpp/configure.ac:
